data/derived/sp14/progs/unify/prog2693.ml.out
Characters 47-61:
  let fixpoint (f,b) = wwhile (let xx = b*b*b in (xx, xx < 100),b);;
                                                 ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
